Fixed minor footer spacing

--- a/kalite/distributed/static/css/distributed/bootstrap-overrides.css
+++ b/kalite/distributed/static/css/distributed/bootstrap-overrides.css
@@ -22,6 +22,7 @@ footer {
     width: 100%;
     bottom: 0;
     left: 0;
+    padding: 10px 0;
 }
 
 a:hover, a:focus {
@@ -445,8 +446,7 @@ footer {
     margin: 0;
 }
 #fle-logo {
-    margin-top: 15px;
-    margin-bottom: 5px;
+    margin: 5px 0;
     height: 18px;
     width: 268px;
 }
